--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.3.1
+python-dotenv==0.13.0
 six==1.12.0
 typed-ast==1.3.1
 Werkzeug==1.0.1
